Unit 1/reddit_clone/style.css
.container{
	background: #c9d3d9;
	padding: 1%;
	margin-top: 1%; 
	border: 1px solid black;
	border-radius: 5px;
}

h3 {
	margin: 0px;
}

body > div > form > div {
	width: 80%;
	margin-left: 10%;
	border: 1px solid black;
	border-radius: 5px;
	padding: 5px;
}

.postTitle{
	float:left;
	margin-left: 5px;
}

.text-right{
	margin-right: 1%;
}

.postComment{
	float:left;
}

.ico {
	height: 100px;
	width: 100%;
}


.titleThumb{
	display:inline;
}

#thumbs-up, #thumbs-down{
	margin: .5%;
}

.slide.ng-enter{
    transition: 0.5s ease all;
    opacity: 0;
}
.slide.ng-enter.ng-enter-active{
    opacity: 1;
}

.slide.ng-leave{
    transition: 0.5s ease all;
    opacity: 1;
}

.slide.ng-leave.ng-leave-active{
    opacity: 0;
}

.container.ng-enter{
    transition: 0.5s ease all;
    opacity: 0;
}
.container.ng-enter.ng-enter-active{
    opacity: 1;
}

.container.ng-leave{
    transition: 0.5s ease all;
    opacity: 1;
}

.container.ng-leave.ng-leave-active{
    opacity: 0;
}

#sortBy{
	margin-top: 1%;
}

.comment {
	background-color: white;
	width: 80%;
	margin-left: 10%;
	border: 1px solid black;
	border-radius: 5px;
}
.newComment {
	text-align: center;
}

.greenNum{
	color: green;
}

.redNum{
	color: red;
}

